--- a/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
+++ b/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
@@ -184,7 +184,7 @@
         }
         else
         {
-            settings.ADSettingsId = 1;
+            settings.Id = 1;
             _insert = true;
         }
         LoadingData = false;
