--- a/BLAZAM/Shared/UI/Settings/Permissions/OUPrivilegeEditor.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/OUPrivilegeEditor.razor
@@ -60,9 +60,9 @@
         }
     }
 
-    private PermissionMap? NewMapping;
-    List<PermissionMap> appliedMappings { get; set; } = new List<PermissionMap>();
-    List<PermissionMap> inheritedMappings { get; set; } = new List<PermissionMap>();
+    private PermissionMapping? NewMapping;
+    List<PermissionMapping> appliedMappings { get; set; } = new List<PermissionMapping>();
+    List<PermissionMapping> inheritedMappings { get; set; } = new List<PermissionMapping>();
 
     protected override async Task OnInitializedAsync()
     {
