DBMigration for soft deletions

--- a/BLAZAM/Shared/UI/Settings/Permissions/EditAccessLevel.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/EditAccessLevel.razor
@@ -330,6 +330,7 @@
     {
         WorkingModel.DeletedAt = DateTime.UtcNow;
         await Context.SaveChangesAsync();
+        InvokeAsync(StateHasChanged);
     }
     private bool ShowField(ActiveDirectoryField field)
     {
